@@ -1,0 +1,2 @@
+MD5 9678b7be448c44a763365cc30035c90c vdr-text2skin-0.0.6.tgz 52553
+MD5 ff498ff88ef66e656fa63a8b25bc4f8c demo.tgz 1117144
