@@ -1,3 +1,9 @@
+*vdrplugin-text2skin-0.0.6 (21 June 2004)
+
+  21. June 2004; Christian Gmeiner <christian at visual-page dot de>
+  some fixes in the ebuild
+  version bump
+
 *vdrplugin-text2skin-0.0.2 (2004/06/10)
  version bump & demo skins added
 
